# AI-Workshops

./: main.py  pyproject.toml  test_sse_client.py
mcp_faq/: README.md  main.py  pyproject.toml
week3-homework/code/: .gitignore  docker-compose.yml  evaluation_results.csv  monitoring.db  pyproject.toml
week3-homework/code/logs/: _agent_log_20251125_154729.json
week3-homework/code/monitoring/: README.md  app.py  evaluator.py  export.py  models.py  runner.py  schemas.py
week3-homework/code/notebooks/: ground-truth.ipynb
week3-homework/code/tests/: test_agent.py
week3-homework/code/wikiagent/: _logging_.py  main.py  tools.py  wikipagent.py
