[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "minsearch>=0.0.7",
    "openai>=2.6.1",
    "pydantic-ai>=1.7.0",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
]
